Fixed Collapse problem with parts for #205.

--- a/galah/web/static/galah.css
+++ b/galah/web/static/galah.css
@@ -179,6 +179,7 @@ a {
     width: 93%;
     background: white;
     display: none;
+    clear: both;
 }
 
 .parts_detail {
